# serial_gui_tool

./: .gitignore  CMakeLists.txt  highlight_rules_dialog.cpp  log_highlighter.h  main.cpp  main_window.cpp  main_window.h  main_window_ui.cpp  plot_widget.cpp  plot_widget.h  search_helper.cpp  serial_worker.cpp  serial_worker.h
include/: batch_command.h  highlight_rules_dialog.h  main_window.h  plot_widget.h  search_helper.h  serial_worker.h
src/: batch_command.cpp  log_highlighter.cpp  main.cpp  main_window.cpp  main_window_ui.cpp  plot_widget.cpp  serial_worker.cpp
